--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -1,7 +1,19 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.5'
+    }
+}
+
+plugins {
+    id "com.google.protobuf" version "0.8.5"
+    id "java"
+}
+
 group 'BookStore'
 version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
@@ -14,5 +26,23 @@ dependencies {
     compile group: 'com.typesafe.akka', name: 'akka-stream_2.12', version: '2.5.12'
     compile group: 'com.typesafe.akka', name: 'akka-remote_2.12', version: '2.5.12'
     compile group: 'com.typesafe.akka', name: 'akka-slf4j_2.12', version: '2.5.12'
+    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.5.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+
+sourceSets {
+    main {
+        proto {
+            srcDir 'src/main/protobuf'
+        }
+        java {
+            srcDirs = ['src/main/java', 'src/generated']
+        }
+    }
+}
+
+
+protobuf {
+    generatedFilesBaseDir = "$projectDir/src/generated"
 }
