--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -5,17 +5,31 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.5'
+        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.4"
     }
 }
 
 plugins {
     id "com.google.protobuf" version "0.8.5"
     id "java"
+    id "application"
+    id "com.github.johnrengelman.shadow" version "2.0.4"
 }
+
+mainClassName = 'BookStore'
+
 
 group 'BookStore'
 version '1.0-SNAPSHOT'
 
+jar {
+    manifest {
+        attributes 'Main-Class': "BookStore"
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
 
 sourceSets {
     main {
@@ -45,4 +59,14 @@ dependencies {
     compile group: 'com.typesafe.akka', name: 'akka-slf4j_2.12', version: '2.5.12'
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.5.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+
+shadowJar {
+    baseName = 'server'
+    classifier = null
+    version = null
+    transform(com.github.jengelman.gradle.plugins.shadow.transformers.AppendingTransformer) {
+        resource = 'reference.conf'
+    }
 }
